# LSM-pricer

./: .gitignore  Analysis_plots.ipynb  CMakeLists.txt  Convergence.ipynb  LSM_pricer.ipynb  README.md  _config.yml  index.md
_includes/: head_custom.html
_layouts/: lsm_page.html
analysis/: plot_convergence.py
assets/css/: style.scss
cpp/: README.md  run_coverage.sh
cpp/.devcontainer/.github/classroom/: autograding.json
cpp/src/: basis_functions.cpp  convergence_analyser.cpp  convergence_analyser.hpp  generate_convergence_output.cpp  main.cpp  mc_paths.cpp  ols_regression.cpp  underlying_sde.cpp  underlying_sde.hpp
cpp/tests/: test_OLS_regression.cpp  test_basis_functions.cpp  test_lsm_pricer.cpp  test_option_payoff.cpp
dependencies/eigen/5.0.1/: INSTALL_RECEIPT.json  sbom.spdx.json
docs/: BSPricer.md  BasisFunction.md  Benchmark_convergence.md  ConvergenAnalyzer.md  ConvergenceResults.md  LSMPRicer: SimulatPaths.md  LSMPRicer_SimulatPaths.md  LSMPricer.md  LSMPricer: BackwardInduction.md  LSMPricer: Optionvalue.md  LSMPricer: Price.md  LSMPricer: data structures.md  LSMPricer_BackwardInduction.md  LSMPricer_Optionvalue.md  MCPaths.md  OLSRegression.md  OptionPayoff.md  UnderlyingSDE.md  main.md  tests.md  text.md  uml_diagram.md
pages/: BSPricer.md  BasisFunction.md  ConvergenAnalyzer.md  LSMPricer.md  MCPaths.md  OLSRegression.md  OptionPayoff.md  UnderlyingSDE.md
src/: basis_functions.cpp  basis_functions.hpp  bs_pricer.cpp  bs_pricer.hpp  convergence_analyser.cpp  convergence_analyser.hpp  finite_difference.cpp  finite_difference.hpp  generate_convergence_output.cpp  lsm_pricer.cpp  lsm_pricer.hpp  lsm_types.hpp  main.cpp  mc_paths.cpp  mc_paths.hpp  ols_regression.cpp  ols_regression.hpp  option_payoff.cpp  option_payoff.hpp  underlying_sde.cpp  underlying_sde.hpp
tests/: CMakeLists.txt  finite_difference_tests.cpp  my_test.cpp  test_basis_functions.cpp  test_bs_pricer.cpp  test_convergence_analyser.cpp  test_lsm_pricer.cpp  test_option_payoff.cpp  test_underlying_sde.cpp
